--- a/src/css/copayBitrefill.css
+++ b/src/css/copayBitrefill.css
@@ -10,3 +10,35 @@
 .iti-flag {
   background-image: url("img/flags.png");
 }*/
+
+.intl-tel-input input,
+.intl-tel-input input[type=text],
+.intl-tel-input input[type=tel] {
+  padding-left: 44px !important;
+}
+
+.bitrefill--logo {
+  text-align: center;
+  margin: 40px 0;
+}
+
+.bitrefill--selectedOp {
+  text-align: left;
+}
+
+ul.bitrefill--operator-list li,
+ul.bitrefill--package-list li {
+  padding: 13px 20px;
+  border-bottom: 1px solid #E9E9EC;
+}
+
+.bitrefill--operator-item {
+  line-height: 1.5;
+  list-style: none;
+  padding: 5px 0;
+}
+
+.bitrefill--operator-item img {
+  margin-right: 5px;
+  width: 50px;
+}
