--- a/src/views/bitrefill.html
+++ b/src/views/bitrefill.html
@@ -49,7 +49,7 @@
       
       <div class="m20t" ng-hide="selectedOp">
         <button class="button black round expand" ng-click="lookupNumber()"
-          ng-disabled="loading" translate>
+          ng-disabled="loading || !phone" translate>
           Continue
         </button>
       </div>
@@ -61,19 +61,18 @@
             </label>
           </div>
           <div class="bitrefill--selectedOp" ng-click="openOperatorsModal(operators, selectedOp)">
+            <div class="right text-gray">
+              <i class="icon-arrow-right3 size-24"></i>
+            </div>
             <div class="bitrefill--operator-item">
               <img src="{{ selectedOp.logoImage }}"/>
               <span class="bitrefill--operator-name">{{ selectedOp.name }}</span>
             </div>
-            <small>
-              Wrong telco?
-              <a ng-click="">Select another telco</a>
-            </small>
           </div>
       </div>
       
-      <div ng-show="selectedOp" class="m10t">
-          <label><span translate>Package</span>
+      <div ng-show="selectedOp && !selectedOp.isRanged" class="m10t">
+          <label><span translate>Amount</span>
             <select class="m10t" ng-model="package"
               ng-options="package as package.valueStr for package in packages"
               ng-change="selectPackage()">
@@ -83,10 +82,28 @@
           <div ng-show="package" class="">{{ package.btcValueStr }}</div>
       </div>
       
-      <div ng-show="package" class="m10t">
+      <div ng-show="selectedOp && selectedOp.isRanged" class="m10t">
+        <div class="row collapse">
+          <label for="amount" class="left" >
+            <span translate>Amount</span>
+            <small translate>From {{selectedOp.range.min}} to {{selectedOp.range.max}} {{selectedOp.currency}}</small>
+          </label>
+        </div>
+        <div class="input">
+          <input class="m0" type="number" id="amount"
+                 ng-attr-placeholder="{{'Amount in'}} {{selectedOp.currency}}"
+                 min="{{selectedOp.range.min}}"
+                 max="{{selectedOp.range.max}}"
+                 step="{{selectedOp.range.step}}"
+                 name="amount" ng-model="amount">
+        </div>
+      </div>
+      
+      <div ng-show="selectedOp" class="m10t">
         <div class="row collapse">
           <label for="email" class="left" >
-            <span translate>Email</span><small translate>Receipt will be sent to this email</small>
+            <span translate>Email</span>
+            <small translate>Receipt will be sent to this email</small>
           </label>
         </div>
         <div class="input">
@@ -95,8 +112,9 @@
         </div>
       </div>
       
-      <div class="columns" ng-show="package && email" ng-disabled="loading">
-        <button class="button black round expand" ng-click="placeOrder()" translate>
+      <div class="columns" ng-show="selectedOp">
+        <button class="button black round expand" ng-disabled="!isValid() || loading" 
+                ng-click="placeOrder()" translate>
           Place order
         </button>
       </div>
