Workaound failed geo ip lookup

--- a/src/views/bitrefill.html
+++ b/src/views/bitrefill.html
@@ -69,8 +69,9 @@
 
         <div class="input">
           <input class="m0" type="text" id="phone" name="phone"
-               minLength="4" ng-model="phone" default-country="auto" required
+               minLength="4" ng-model="phone" initial-country="auto" required
                ng-disabled="selectedOp"
+               geo-ip-lookup="geoIpLookup"
                skip-util-script-download international-phone-number>
         </div>
       </div>
