--- a/src/views/modals/refill-status.html
+++ b/src/views/modals/refill-status.html
@@ -1,39 +1,43 @@
 
 <div ng-if="type == 'broadcasted'" class="popup-txsent text-center">
   <i class="small-centered columns m20tp" 
-    ng-class="{'fi-clock': !delivered && !failed, 'fi-check': delivered,
-     'fi-thumbnails': pinInfo, 'fi-x': failed }"
+    ng-class="{
+      'fi-clock': !orderStatus || orderStatus.paid || orderStatus.confirmed,
+      'fi-check': orderStatus.delivered,
+      'fi-thumbnails': orderStatus.data.pinInfo,
+      'fi-x': orderStatus.failed || orderStatus.partial
+      }"
     ng-style="{'color':color, 'border-color':color}"></i>
-  <div ng-show="tx.amountStr" ng-hide="delivered || failed || pinInfo" class="m20t size-24 text-white">
+  <div ng-show="!orderStatus || orderStatus.paid || orderStatus.confirmed" class="m20t size-24 text-white">
     Waiting for order to complete..
   </div>
-  <div ng-show="pinInfo" class="m20t size-24 text-white">
+  <div ng-show="orderStatus.data.pinInfo" class="m20t size-24 text-white">
     PIN required
   </div>
   
-  <div ng-show="delivered" class="m20t size-24 text-white">
+  <div ng-show="orderStatus.delivered && !orderStatus.data.pinInfo" class="m20t size-24 text-white">
     Delivered
   </div>
-  <div ng-show="failed" class="m20t size-24 text-white">
+  <div ng-show="orderStatus.failed || orderStatus.partial" class="m20t size-24 text-white">
     Failed
   </div>
   
-  <div class="size-16 text-gray" ng-show="pinInfo">
-    <div class="m10t" translate>{{ pinInfo.instructions }}</div>
+  <div class="size-16 text-gray" ng-show="orderStatus.data.pinInfo">
+    <div class="m10t" translate>{{ orderStatus.data.pinInfo.instructions }}</div>
     <div class="m10t"><span translate>Your PIN code</span>:</div>
-    <div class="bitrefill--pin-code" translate>{{ pinInfo.pin }}</div>
-    <small translate>{{ pinInfo.other}}</small>
+    <div class="bitrefill--pin-code" translate>{{ orderStatus.data.pinInfo.pin }}</div>
+    <small translate>{{ orderStatus.data.pinInfo.other}}</small>
   </div>
   
-  <div class="size-16 text-gray" ng-show="delivered" translate>
+  <div class="size-16 text-gray" ng-show="orderStatus.delivered && !orderStatus.data.pinInfo" translate>
     {{ tx.customData.description }}
   </div>
 
-  <div class="size-16 text-gray" ng-show="failed" translate>
-    {{ failed }}
+  <div class="size-16 text-gray" ng-show="orderStatus.failed || orderStatus.partial" translate>
+    {{ orderStatus.msg || 'Failed to process order' }}
   </div>
 
-  <div class="size-16 text-gray" ng-hide="delivered || failed || pinInfo">
+  <div class="size-16 text-gray" ng-show="!orderStatus || orderStatus.paid || orderStatus.confirmed">
     <div translate>Payment sent</div>
     <div translate>{{ tx.customData.description }}</div>
   </div>
@@ -41,6 +45,7 @@
   <div class="text-center m20t">
     <a class="button outline round light-gray tiny small-4" ng-click="cancel()">OKAY</a>
   </div>
+  <a ng-click="toggleStatus()">next</a>
 </div>
 
 
