--- a/src/views/modals/confirmation.html
+++ b/src/views/modals/confirmation.html
@@ -1,5 +1,5 @@
 
-<div class="bitrefill--confirm">
+<div>
   <div class="bitrefill--confirm-logo text-center small-centered columns m20t" ng-style="{'color':color, 'border-color':color}">
     <img ng-src="{{order.operator.logoImage}}">
   </div>
