--- a/src/views/modals/refill-status.html
+++ b/src/views/modals/refill-status.html
@@ -23,14 +23,15 @@
   </div>
   
   <div class="size-16 text-gray" ng-show="orderStatus.data.pinInfo">
-    <div class="m10t" translate>{{ orderStatus.data.pinInfo.instructions }}</div>
+    <div class="m10t enable_text_select" translate>{{ orderStatus.data.pinInfo.instructions }}</div>
     <div class="m10t"><span translate>Your PIN code</span>:</div>
-    <div class="bitrefill--pin-code" translate>{{ orderStatus.data.pinInfo.pin }}</div>
+    <div class="bitrefill--pin-code enable_text_select" translate>{{ orderStatus.data.pinInfo.pin }}</div>
     <small translate>{{ orderStatus.data.pinInfo.other}}</small>
   </div>
   
   <div class="size-16 text-gray" ng-show="orderStatus.delivered && !orderStatus.data.pinInfo" translate>
-    {{ tx.message }}
+    <div>{{ tx.message }}</div>
+    <small translate>Order ID: <span class="enable_text_select">{{ tx.customData.bitrefillOrderId}}</span></small>
   </div>
 
   <div class="size-16 text-gray" ng-show="orderStatus.failed || orderStatus.partial" translate>
@@ -40,6 +41,7 @@
   <div class="size-16 text-gray" ng-show="!orderStatus || orderStatus.paid || orderStatus.confirmed">
     <div translate>Payment sent</div>
     <div translate>{{ tx.message }}</div>
+    <small translate>Order ID: <span class="enable_text_select">{{ tx.customData.bitrefillOrderId}}</span></small>
   </div>
   
   <div class="text-center m20t">
